force-app/main/default/objects/Chatter_Event__c/Chatter_Event__c.object-meta.xml
<CustomObject>
    <label>Chatter Event</label>
    <nameField>
        <label>Chatter Event Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Chatter Events</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>