force-app/main/default/objects/Chatter_Event__c/fields/Feed_Item_Id__c.field-meta.xml
<CustomField>
    <fullName>Feed_Item_Id__c</fullName>
    <externalId>true</externalId>
    <label>Feed Item Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>