force-app/main/default/objects/Chatter_Event__c/fields/Member__c.field-meta.xml
<CustomField>
    <fullName>Member__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Member</description>
    <label>Member</label>
    <referenceTo>FieloPLT__Member__c</referenceTo>
    <relationshipLabel>Chatter Events</relationshipLabel>
    <relationshipName>ChatterEvents</relationshipName>
    <type>Lookup</type>
</CustomField>