force-app/main/default/objects/Chatter_Event__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Write a post</fullName>
            </value>
            <value>
                <fullName>Your answer is marked as best</fullName>
            </value>
            <value>
                <fullName>Receive a like</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>