force-app/main/default/objects/Chatter_Event__c/recordTypes/Answer_a_question.recordType-meta.xml
<RecordType>
    <fullName>Answer_a_question</fullName>
    <active>true</active>
    <label>Answer a question</label>
</RecordType>