force-app/main/default/objects/Chatter_Event__c/recordTypes/ReceivelLike.recordType-meta.xml
<RecordType>
    <fullName>ReceivelLike</fullName>
    <active>true</active>
    <label>ReceivelLike</label>
</RecordType>