force-app/main/default/objects/Chatter_Event__c/recordTypes/Write_a_post.recordType-meta.xml
<RecordType>
    <fullName>Write_a_post</fullName>
    <active>true</active>
    <label>Write a post</label>
</RecordType>