force-app/main/default/objects/Chatter_Event__c/recordTypes/Your_answer_is_marked_as_best.recordType-meta.xml
<RecordType>
    <fullName>Your_answer_is_marked_as_best</fullName>
    <active>true</active>
    <label>Your answer is marked as best</label>
</RecordType>